# crevise

./: Cargo.toml  README.md  run.sh
src/: args.rs  command.rs  encrypted.rs  error.rs  lib.rs  main.rs  message.rs  peers.rs
src/peers/: known.rs  mod.rs
tests/: integration.rs  known_hosts.json
